--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "seed": "npx prisma db seed ",
+    "seed": "node prisma/seeds/users.js ",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
